--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -3,7 +3,9 @@
 //         top: 8px;
 //     }
 // }
-
+.-features {
+    text-transform: lowercase;
+}
 input:disabled + .checkmark,
 input:disabled + .checkmark + .text {
     color: #ccc;
@@ -184,7 +186,8 @@ input:disabled + .checkmark + .text {
     }
 }
 .category-img {
-    width: 100%;
+    width: 220px;
+    padding: 0 40px;
     margin: 20px 0;
 }
 .category-img-container {
@@ -193,6 +196,12 @@ input:disabled + .checkmark + .text {
 .category-text {
     text-align: center;
     font-size: 25px;
+    text-decoration: none;
+    color: $secondary-color;
+    &:hover {
+        text-decoration: none;
+        color: $primary-color;
+    }
 }
 @media only screen and (max-width: 768px) {
     .listing {
