--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -187,7 +187,6 @@ input:disabled + .checkmark + .text {
 }
 .category-img {
     width: 220px;
-    padding: 0 40px;
     margin: 20px 0;
 }
 .category-img-container {
@@ -198,10 +197,8 @@ input:disabled + .checkmark + .text {
     font-size: 20px;
     text-decoration: none;
     color: $secondary-color;
-    &:hover {
-        text-decoration: none;
-        color: $primary-color;
-    }
+    margin-bottom: 40px;
+
 }
 @media only screen and (max-width: 768px) {
     .listing {
