--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -34,7 +34,8 @@ input:disabled + .checkmark + .text {
             width: 180px;
             margin-top: 45px;
             text-align: center;
-            overflow: auto;
+            overflow-y: auto;
+            overflow-x: hidden;
             padding: 20px;
 
             @media only screen and (min-width: 768px) {
