--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -194,6 +194,7 @@ input:disabled + .checkmark + .text {
 .category-img-container {
     max-width: 1080px;
     margin: 0 auto;
+    min-height: 400px;
 }
 .category-text {
     text-align: center;
