--- a/resources/sass/dropdown.scss
+++ b/resources/sass/dropdown.scss
@@ -27,7 +27,16 @@
         }
     }
 }
-
+.dropdown .dropdown-menu {
+    @media only screen and (max-width: 786px) {
+        border: 1px solid $border-color;
+        border-radius: 4px;
+        // max-width: 157px;
+        text-align: left;
+        max-width: 180px;
+        // width: 100px !important;
+    }
+}
 .dropdown-menu {
     padding: 0;
     margin: 0;
