--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -195,7 +195,7 @@ input:disabled + .checkmark + .text {
 .category-img-container {
     max-width: 1080px;
     margin: 0 auto;
-    min-height: 400px;
+    min-height: 60px;
 }
 .category-text {
     text-align: center;
@@ -225,7 +225,8 @@ input:disabled + .checkmark + .text {
             }
         }
     }
-    .listing,.category-page {
+    .listing,
+    .category-page {
         .listing-container {
             .listing-top-controls {
                 position: relative;
