Drop down issue is fixex

--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -264,6 +264,7 @@ input:disabled + .checkmark + .text {
                     }
 
                     .dropdown-item {
+                        white-space: unset !important;
                         &:hover {
                             .dropdown-menu {
                                 display: block;
