new images and footer fixed

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -112,27 +112,21 @@ body {
 .brand-logos {
     .-cb2 {
         max-width: 57px;
-        margin: 0 20px;
     }
     .-crate {
         max-width: 141px;
-        margin: 0 20px;
     }
     .-pier1 {
         max-width: 107px;
-        margin: 0 20px;
     }
     .-westelm {
         max-width: 127px;
-        margin: 0 20px;
     }
     .-worldmarket {
         max-width: 116px;
-        margin: 0 20px;
     }
     .more-soon {
         max-width: 189px;
-        margin: 0 20px;
     }
 }
 
@@ -147,14 +141,23 @@ body {
         font-size: 26px;
         font-weight: 600;
     }
-    .brand-logos {
-        .brand-logo {
-            max-width: 100px;
-        }
-    }
+
+
     .socials {
         .-icons {
             font-size: 22px;
         }
     }
+    .brand-logos {
+        padding: 0px 30px;
+
+        .brand-logo {
+          padding-left: 15px;
+          width: 12%;
+
+          &.more-soon {
+            width: 25%;
+          }
+        }
+      }
 }
