class changed for labels

--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -75,7 +75,7 @@ input:disabled + .checkmark + .text {
                         list-style: none;
 
                         /* Customize the label (the container) */
-                        .container {
+                        .filter-label {
                             display: block;
                             position: relative;
                             padding-left: 25px;
