--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -344,7 +344,7 @@ input:disabled + .checkmark + .text {
                         li {
                             display: inline-block;
 
-                            .container {
+                            .filter-label {
                                 .checkmark {
                                     border: 1px solid $white !important;
 
