css added for loading imgs

--- a/resources/sass/products-container.scss
+++ b/resources/sass/products-container.scss
@@ -20,19 +20,23 @@
                 position: relative;
                 margin-bottom: 15px;
 
-                .variation-img{
+                .variation-img {
                     position: absolute;
                     bottom: 0px;
                     z-index: 1;
                     left: 0;
+                }
+                .img-fluid {
+                    min-height: 205px;
+                    background-color: $primary-color;
                 }
 
                 .prod-info {
                     position: absolute;
                     bottom: 0px;
                     padding: 5px;
-                    width: 100%;    
-                    background-color: rgba(0,0,0, 0.4);
+                    width: 100%;
+                    background-color: rgba(0, 0, 0, 0.4);
                     height: 25px;
                     text-align: left;
                     font-size: 14px;
@@ -57,14 +61,14 @@
                     margin: 15px;
                     top: 0px;
                     right: 0px;
-                    z-index:100;
-                    
+                    z-index: 100;
+
                     .-icon {
                         font-size: 20px;
                     }
 
-                    &.marked{
-                        .-icon{
+                    &.marked {
+                        .-icon {
                             font-weight: 900;
                         }
                     }
