--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -191,7 +191,9 @@ input:disabled + .checkmark + .text {
     width: 100%;
     margin: 20px 0;
     max-width: 220px;
+    min-height: 220px;
 }
+
 .category-img-container {
     max-width: 1080px;
     margin: 0 auto;
