--- a/resources/sass/products-container.scss
+++ b/resources/sass/products-container.scss
@@ -19,16 +19,14 @@
             .ls-product {
                 position: relative;
                 margin-bottom: 15px;
+                min-height: 205px;
+                background-image: url('../../public/images/Spinner-2s-200px.gif');
 
                 .variation-img {
                     position: absolute;
                     bottom: 0px;
                     z-index: 1;
                     left: 0;
-                }
-                .img-fluid {
-                    min-height: 205px;
-                    background-color: $primary-color;
                 }
 
                 .prod-info {
