--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -305,6 +305,8 @@ input:disabled + .checkmark + .text {
 
                         .ls-product {
                             margin-bottom: 0px;
+                            min-height: 130px;
+                            background-position: center;
                         }
                     }
                 }
