--- a/resources/sass/products-container.scss
+++ b/resources/sass/products-container.scss
@@ -20,8 +20,10 @@
                 position: relative;
                 margin-bottom: 15px;
                 min-height: 205px;
-                background-image: url('../../public/images/Spinner-2s-200px.gif');
-
+                // background-image: url('../../public/images/Spinner-2s-200px.gif');
+                // background-image: url('../../public/images/Ellipsis-1.5s-194px\ \(1\).gif');
+                // background-image: url('../../public/images/Ellipsis-1.9s-200px.gif');
+                background-image: url('../../public/images/final.gif');
                 .variation-img {
                     position: absolute;
                     bottom: 0px;
