facebook color code

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -21,6 +21,7 @@ $cyan: #6cb2eb;
 $white: #ffffff;
 $golden: #e4cd00;
 $grey: #d6d6d6;
+$facebook: #3b5998;
 
 // Main colors
 $primary-color: #ffcc00;
