--- a/resources/sass/products-container.scss
+++ b/resources/sass/products-container.scss
@@ -19,8 +19,12 @@
             .ls-product {
                 position: relative;
                 margin-bottom: 15px;
-
-                .variation-img{
+                min-height: 205px;
+                // background-image: url('../../public/images/Spinner-2s-200px.gif');
+                // background-image: url('../../public/images/Ellipsis-1.5s-194px\ \(1\).gif');
+                // background-image: url('../../public/images/Ellipsis-1.9s-200px.gif');
+                background-image: url('../../public/images/final.gif');
+                .variation-img {
                     position: absolute;
                     bottom: 0px;
                     z-index: 1;
@@ -31,8 +35,8 @@
                     position: absolute;
                     bottom: 0px;
                     padding: 5px;
-                    width: 100%;    
-                    background-color: rgba(0,0,0, 0.4);
+                    width: 100%;
+                    background-color: rgba(0, 0, 0, 0.4);
                     height: 25px;
                     text-align: left;
                     font-size: 14px;
@@ -57,14 +61,14 @@
                     margin: 15px;
                     top: 0px;
                     right: 0px;
-                    z-index:100;
-                    
+                    z-index: 100;
+
                     .-icon {
                         font-size: 20px;
                     }
 
-                    &.marked{
-                        .-icon{
+                    &.marked {
+                        .-icon {
                             font-weight: 900;
                         }
                     }
