--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -432,15 +432,7 @@ input:disabled + .checkmark + .text {
     padding-top: 60px;
 }
 
-.sidenav a {
-    padding-right: 10px;
-    text-decoration: none;
-    font-size: 20px;
-    display: block;
-    transition: 0.2s;
-}
-
-.sidenav a:hover {
+.sidenav a.collapsible:hover {
     color: $primary-color;
 }
 
@@ -452,16 +444,7 @@ input:disabled + .checkmark + .text {
     margin-left: 50px;
 }
 
-@media screen and (max-height: 450px) {
-    .sidenav {
-        padding-top: 15px;
-    }
-    .sidenav a {
-        font-size: 18px;
-        color: $white;
-    }
-}
-.collapsible {
+.sidenav .collapsible {
     color: $white;
     cursor: pointer;
     padding: 18px;
@@ -471,11 +454,40 @@ input:disabled + .checkmark + .text {
 }
 
 .active,
-.collapsible:hover {
+.sidenav .collapsible:hover {
     color: $primary-color;
 }
 .sidenav-items {
     padding: 0 18px;
-    display: none;
     overflow: hidden;
+    list-style-type: none;
+
+    .department {
+        color:#fff;
+
+        a.link {
+            color:#fff;
+            width: 80%;
+            display: inline-block;
+            padding: 10px 0;
+        }
+    }
+    a.collapsible {
+        padding-right: 10px;
+        text-decoration: none;
+        font-size: 20px;
+        transition: 0.2s;
+    }
+
 }
+
+@media screen and (max-height: 450px) {
+    .sidenav {
+        padding-top: 15px;
+    }
+    .sidenav a {
+        font-size: 18px;
+        color: $white;
+    }
+}
+
