auth modal and hamburger menu

--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -394,6 +394,7 @@ input:disabled + .checkmark + .text {
         @include media-breakpoint-down(md) {
             .dropdown-item {
                 width: 90%;
+                z-index: 5;
             }
             .dropdown-toggle {
                 margin-top: 4px;
@@ -418,3 +419,78 @@ input:disabled + .checkmark + .text {
 .submenu-dropdown {
     padding: 10px;
 }
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 101;
+    top: 0;
+    left: 0;
+    background-color: $secondary-color;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+}
+
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+
+.sidenav .collapsible {
+    color: $white;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    text-align: left;
+    outline: none;
+}
+
+.active,
+.sidenav .collapsible:hover {
+    color: $primary-color;
+}
+.sidenav-items {
+    padding: 0 18px;
+    overflow: hidden;
+    list-style-type: none;
+
+    .department {
+        color:#fff;
+        .category-list {
+            padding: 0 18px;
+            overflow: hidden;
+            list-style-type: none;
+        }
+    }
+    a.link {
+        color:#fff;
+        width: 80%;
+        display: inline-block;
+        padding: 10px 0;
+        &:hover {
+            color: $primary-color;
+        }
+    }
+    a.collapsible {
+        padding-right: 10px;
+        text-decoration: none;
+        font-size: 20px;
+        transition: 0.2s;
+    }
+
+}
+
+@media screen and (max-height: 450px) {
+    .sidenav {
+        padding-top: 15px;
+    }
+    .sidenav a {
+        font-size: 18px;
+        color: $white;
+    }
+}
+
