--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -22,6 +22,8 @@ $white: #ffffff;
 $golden: #e4cd00;
 $grey: #d6d6d6;
 $facebook: #3b5998;
+$category-bg: #21334b;
+$products-bg: #ffcc00;
 
 // Main colors
 $primary-color: #ffcc00;
