--- a/resources/sass/detailOverview.scss
+++ b/resources/sass/detailOverview.scss
@@ -99,21 +99,20 @@
         }
 
         .-images-container {
-            height: 300px;
+            height: 480px;
             overflow-x: auto;
             margin: 0px 0px 15px 0px;
             @include media-breakpoint-up(md) {
                 margin: 15px 0px;
             }
             .-images {
-                overflow-x: scroll;
-                overflow-y: hidden;
-                height: 300px;
+                overflow-y: scroll;
+                height: 480px;
                 white-space: nowrap;
                 padding: 15px 0;
                 .-prod-img {
                     max-height: 100%;
-                    display: inline-block;
+                    display: block;
                 }
             }
         }
@@ -134,12 +133,13 @@
                 }
             }
         }
+        .brand-header {
+            padding-bottom: 5px;
+            border-bottom: 2px solid #ccc;
+            margin-bottom: 10px;
+        }
 
         .prod-price-card {
-            border-radius: 20px;
-            background-color: $white;
-            margin-top: -50px;
-            padding: 30px 10px;
             font-size: 24px;
             font-weight: 600;
             .pdp-buy-btn {
@@ -180,6 +180,7 @@
             margin: auto auto 10px auto;
             .rating {
                 margin-left: 0px;
+                vertical-align: middle;
             }
         }
     }
@@ -347,4 +348,59 @@
         font-size: 14px;
         background: $yellow;
     }
+}
+.-images {
+    height: 500px;
+    width: auto;
+    overflow: scroll;
+    overflow-x: hidden;
+}
+.nav {
+    display: flex;
+    flex-wrap: nowrap;
+    margin-bottom: 0;
+    list-style: none;
+}
+.nav-pills .nav-link {
+    border-radius: 0.25rem;
+    color: $category-bg;
+}
+.pdp-buy-btn {
+    color: $products-bg;
+    background-color: $category-bg;
+    margin: 5px;
+    display: flex;
+    width: 40%;
+}
+.-product-details {
+    span {
+        margin: 5px;
+    }
+}
+.products-modal-details {
+    overflow: scroll;
+    max-height: 300px;
+}
+.navbar-modal {
+    background-color: transparent !important;
+    color: $products-bg;
+    font-size: 18px;
+}
+.modal-nav-link {
+    display: block;
+    padding: 0rem 1rem;
+    text-decoration: none;
+    color: $category-bg;
+}
+.modal-nav-item {
+    :hover {
+        text-decoration: none;
+        color: $black;
+    }
+}
+.modal-hr {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    border: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
