--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -532,11 +532,12 @@ input:disabled + .checkmark + .text {
 .-product-details {
     span {
         margin: 5px;
+        font-size: 30px;
     }
 }
 .products-modal-details {
     overflow: scroll;
-    max-height: 300px;
+    max-height: 400px;
 }
 .navbar-modal {
     background-color: transparent !important;
