modal ui issues fixed

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -24,6 +24,7 @@ $grey: #d6d6d6;
 $facebook: #3b5998;
 $category-bg: #21334b;
 $products-bg: #ffcc00;
+$product-price: #b76e79;
 
 // Main colors
 $primary-color: #ffcc00;
