modal cross btn issue fixed

--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -516,7 +516,7 @@ input:disabled + .checkmark + .text {
     }
 }
 .-images {
-    height: 650px;
+    height: 520px;
     width: auto;
     overflow: scroll;
     overflow-x: hidden;
@@ -552,7 +552,7 @@ input:disabled + .checkmark + .text {
 }
 .products-modal-details {
     overflow: scroll;
-    max-height: 400px;
+    max-height: 250px;
 }
 .navbar-modal {
     background-color: transparent !important;
@@ -595,4 +595,9 @@ input:disabled + .checkmark + .text {
     /* 100% = dialog height, 120px = header + footer */
     max-height: calc(100% - 120px);
     overflow-y: scroll;
+}
+.close-btn-modal {
+    margin-right: -40px;
+    font-size: 40px;
+    color: $white !important;
 }
