mobile detaila page

--- a/resources/sass/detailspage.scss
+++ b/resources/sass/detailspage.scss
@@ -1,5 +1,6 @@
 .detailspage-main-div {
     // font-family: Helvetica, sans-serif;
+    background-color: $white;
 
     .detailspage {
         .wishlist-icon {
@@ -242,12 +243,16 @@
         font-size: 14px;
         font-weight: 600;
         .pdp-buy-btn {
-            width: 100%;
+            width: 40%;
             color: $primary-color;
             background-color: $secondary-color;
-            font-size: 24px;
+            font-size: 14px;
             border-radius: 10px;
             margin: 10px 0px;
+            margin-top: -55px;
+        }
+        span {
+            color: $black;
         }
     }
 
@@ -258,16 +263,21 @@
     .detailspage {
         .container {
             padding: 0px;
+            color: $black;
         }
     }
 
     .tab-content {
         padding: 15px;
+        background-color: $body-bg;
     }
 }
 
 .tab-pane {
     margin-top: 10px;
+}
+.detail-nav-link {
+    color: $black;
 }
 
 .card .card-header {
